c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_tentative_def.c
struct s;

// it's illegal to define a file scope variable (or any variable)
// with an incomplete structure type
// (some compilers allow tentative definitions if the var has external linkage
// and the  type is completed
// later in the same translation unit, but we don't.)
static struct s x;

int main(void) { return 0; }